--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="16dp"
                 android:paddingTop="10dp"
-                android:text="It's Friday night"
+                android:text="Featured Stations"
                 android:textColor="#444444"
                 android:textSize="25sp" />
 
@@ -30,6 +30,7 @@
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
                 android:paddingLeft="16dp"
                 android:text="Play something for..."
                 android:textColor="#888888"
@@ -48,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="16dp"
                 android:paddingTop="10dp"
-                android:text="It's Friday night"
+                android:text="Recent Stations"
                 android:textColor="#444444"
                 android:textSize="25sp" />
 
@@ -56,8 +57,9 @@
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
                 android:paddingLeft="16dp"
-                android:text="Play something for..."
+                android:text="All your favorites are right here:"
                 android:textColor="#888888"
                 android:textSize="18sp" />
 
@@ -74,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="16dp"
                 android:paddingTop="10dp"
-                android:text="It's Friday night"
+                android:text="Party Stations"
                 android:textColor="#444444"
                 android:textSize="25sp" />
 
@@ -82,8 +84,9 @@
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
                 android:paddingLeft="16dp"
-                android:text="Play something for..."
+                android:text="Let's get down!"
                 android:textColor="#888888"
                 android:textSize="18sp" />
 
